--- a/Punto de venta - Prácticas profesionales/Punto de venta - Prácticas profesionales.csproj
+++ b/Punto de venta - Prácticas profesionales/Punto de venta - Prácticas profesionales.csproj
@@ -9,4 +9,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="database.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
