Agregadas las carpetas vacias de arquitectura en capas

--- a/Punto de venta - Prácticas profesionales/Punto de venta - Prácticas profesionales.csproj
+++ b/Punto de venta - Prácticas profesionales/Punto de venta - Prácticas profesionales.csproj
@@ -19,4 +19,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Lógica\" />
+    <Folder Include="Datos\" />
+    <Folder Include="Presentación\" />
+  </ItemGroup>
+
 </Project>
